Sửa lỗi giám sát thi ở product